--- a/public/styles.css
+++ b/public/styles.css
@@ -4471,3 +4471,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 	-o-animation-name: scaleIn;
 	animation-name: scaleIn;
 }
+
+
+#footy{
+    background: blanchedalmond
+}
