--- a/public/styles.css
+++ b/public/styles.css
@@ -4481,8 +4481,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 /*//////FOOTER!*/
 
 section#contact {
-    /*background-color: #222222;*/
-    /*background-image: url('http://artdnaswitchbd.com/componants/images/map-image.png');*/
+    background-color: #222222;
+    background-image: url('http://artdnaswitchbd.com/componants/images/map-image.png');
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -4490,7 +4490,7 @@ section {
     padding: 30px 0PX;
 }
 section#contact .section-heading {
-    color: white;
+    color: blanchedalmond;
 }
 section#contact .form-group {
     margin-bottom: 25px;
@@ -4513,7 +4513,7 @@ section#contact ::-webkit-input-placeholder {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
-    color: #eeeeee;
+    color: blanchedalmond;
 }
 .gellary_bg_none img{
 	width: 100%;
@@ -4524,20 +4524,20 @@ section#contact :-moz-placeholder {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
-    color: #eeeeee;
+    color: blanchedalmond;
 }
 section#contact ::-moz-placeholder {
     /* Firefox 19+ */
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
-    color: #eeeeee;
+    color: blanchedalmond;
 }
 section#contact :-ms-input-placeholder {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
-    color: #eeeeee;
+    color: blanchedalmond;
 }
 section#contact .text-danger {
     color: #e74c3c;
@@ -4571,4 +4571,8 @@ section#contact .text-danger {
     width: 40px;
     height: 20px;
     background: #ffffff;
+}
+
+h1 {
+    font-size: 30px; 
 }
