--- a/public/styles.css
+++ b/public/styles.css
@@ -4482,9 +4482,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 section#contact {
     background-color: #222222;
-    background-image: url('http://artdnaswitchbd.com/componants/images/map-image.png');
+    background-image: url('http://thehipflask.files.wordpress.com/2011/03/peaches.jpg');
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
 }
 section {
     padding: 30px 0PX;
@@ -4583,6 +4583,8 @@ h1 {
     height: 400px; 
     opacity: .75; 
 }
+
+
 
 
 /*#questQuestions { 
