added classes to Divs

--- a/public/styles.css
+++ b/public/styles.css
@@ -4576,7 +4576,7 @@ section#contact .text-danger {
 h1 {
     font-size: 30px; 
 }
-#intro{
+.divvy{
     background-color: blanchedalmond;
     font-size: 24px; 
     width: 500px; 
