--- a/public/styles.css
+++ b/public/styles.css
@@ -4513,7 +4513,7 @@ section#contact ::-webkit-input-placeholder {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
-    color: blanchedalmond;
+    color: purple;
 }
 .gellary_bg_none img{
 	width: 100%;
@@ -4524,20 +4524,20 @@ section#contact :-moz-placeholder {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
-    color: blanchedalmond;
+    color: green;
 }
 section#contact ::-moz-placeholder {
     /* Firefox 19+ */
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
-    color: blanchedalmond;
+    color: red;
 }
 section#contact :-ms-input-placeholder {
     font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
-    color: blanchedalmond;
+    color: blue;
 }
 section#contact .text-danger {
     color: #e74c3c;
@@ -4580,9 +4580,16 @@ h1 {
     background-color: blanchedalmond;
     font-size: 24px; 
     width: 500px; 
-    height: 400px; 
+    height: 800px; 
     opacity: .75; 
 	align-content: center;
 }
 
-
+#intro{
+    background-color: blanchedalmond;
+    font-size: 24px; 
+    width: 800px; 
+    height: 400px; 
+    opacity: .75; 
+	align-content: center;
+}
