--- a/public/styles.css
+++ b/public/styles.css
@@ -340,24 +340,6 @@ p.signin.button{
 }
 
 
-/* styling the checkbox "keep me logged in"*/
-.keeplogin{
-	margin-top: -5px;
-}
-.keeplogin input,
-.keeplogin label{
-	display: inline-block;
-	font-size: 12px;	
-	font-style: italic;
-}
-.keeplogin input#loginkeeping{
-	margin-right: 5px;
-}
-.keeplogin label{
-	width: 80%;
-}
-
-
 /*styling the links to change from one form to another */
 
 p.change_link{
@@ -526,246 +508,6 @@ box-shadow: 0px 0px 30px 0px rgba(0,0,0,0.36);
 	background: transparent;
 }
 
-/*
-Animate.css - http://daneden.me/animate
-LICENSED UNDER THE  MIT LICENSE (MIT)
-
-Copyright (c) 2011 Dan Eden
-
-Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-*/
-
-.animated {
-	-webkit-animation-fill-mode: both;
-	-moz-animation-fill-mode: both;
-	-ms-animation-fill-mode: both;
-	-o-animation-fill-mode: both;
-	animation-fill-mode: both;
-	-webkit-animation-duration: 1s;
-	-moz-animation-duration: 1s;
-	-ms-animation-duration: 1s;
-	-o-animation-duration: 1s;
-	animation-duration: 1s;
-}
-
-.animated.hinge {
-	-webkit-animation-duration: 2s;
-	-moz-animation-duration: 2s;
-	-ms-animation-duration: 2s;
-	-o-animation-duration: 2s;
-	animation-duration: 2s;
-}
-
-@-webkit-keyframes flash {
-	0%, 50%, 100% {opacity: 1;}	
-	25%, 75% {opacity: 0;}
-}
-
-@-moz-keyframes flash {
-	0%, 50%, 100% {opacity: 1;}	
-	25%, 75% {opacity: 0;}
-}
-
-@-ms-keyframes flash {
-	0%, 50%, 100% {opacity: 1;}	
-	25%, 75% {opacity: 0;}
-}
-
-@-o-keyframes flash {
-	0%, 50%, 100% {opacity: 1;}	
-	25%, 75% {opacity: 0;}
-}
-
-@keyframes flash {
-	0%, 50%, 100% {opacity: 1;}	
-	25%, 75% {opacity: 0;}
-}
-
-.flash {
-	-webkit-animation-name: flash;
-	-moz-animation-name: flash;
-	-ms-animation-name: flash;
-	-o-animation-name: flash;
-	animation-name: flash;
-}
-@-webkit-keyframes shake {
-	0%, 100% {-webkit-transform: translateX(0);}
-	10%, 30%, 50%, 70%, 90% {-webkit-transform: translateX(-10px);}
-	20%, 40%, 60%, 80% {-webkit-transform: translateX(10px);}
-}
-
-@-moz-keyframes shake {
-	0%, 100% {-moz-transform: translateX(0);}
-	10%, 30%, 50%, 70%, 90% {-moz-transform: translateX(-10px);}
-	20%, 40%, 60%, 80% {-moz-transform: translateX(10px);}
-}
-
-@-ms-keyframes shake {
-	0%, 100% {-ms-transform: translateX(0);}
-	10%, 30%, 50%, 70%, 90% {-ms-transform: translateX(-10px);}
-	20%, 40%, 60%, 80% {-ms-transform: translateX(10px);}
-}
-
-@-o-keyframes shake {
-	0%, 100% {-o-transform: translateX(0);}
-	10%, 30%, 50%, 70%, 90% {-o-transform: translateX(-10px);}
-	20%, 40%, 60%, 80% {-o-transform: translateX(10px);}
-}
-
-@keyframes shake {
-	0%, 100% {transform: translateX(0);}
-	10%, 30%, 50%, 70%, 90% {transform: translateX(-10px);}
-	20%, 40%, 60%, 80% {transform: translateX(10px);}
-}
-
-.shake {
-	-webkit-animation-name: shake;
-	-moz-animation-name: shake;
-	-ms-animation-name: shake;
-	-o-animation-name: shake;
-	animation-name: shake;
-}
-@-webkit-keyframes bounce {
-	0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}
-	40% {-webkit-transform: translateY(-30px);}
-	60% {-webkit-transform: translateY(-15px);}
-}
-
-@-moz-keyframes bounce {
-	0%, 20%, 50%, 80%, 100% {-moz-transform: translateY(0);}
-	40% {-moz-transform: translateY(-30px);}
-	60% {-moz-transform: translateY(-15px);}
-}
-
-@-ms-keyframes bounce {
-	0%, 20%, 50%, 80%, 100% {-ms-transform: translateY(0);}
-	40% {-ms-transform: translateY(-30px);}
-	60% {-ms-transform: translateY(-15px);}
-}
-
-@-o-keyframes bounce {
-	0%, 20%, 50%, 80%, 100% {-o-transform: translateY(0);}
-	40% {-o-transform: translateY(-30px);}
-	60% {-o-transform: translateY(-15px);}
-}
-@keyframes bounce {
-	0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
-	40% {transform: translateY(-30px);}
-	60% {transform: translateY(-15px);}
-}
-
-.bounce {
-	-webkit-animation-name: bounce;
-	-moz-animation-name: bounce;
-	-ms-animation-name: bounce;
-	-o-animation-name: bounce;
-	animation-name: bounce;
-}
-@-webkit-keyframes tada {
-	0% {-webkit-transform: scale(1);}	
-	10%, 20% {-webkit-transform: scale(0.9) rotate(-3deg);}
-	30%, 50%, 70%, 90% {-webkit-transform: scale(1.1) rotate(3deg);}
-	40%, 60%, 80% {-webkit-transform: scale(1.1) rotate(-3deg);}
-	100% {-webkit-transform: scale(1) rotate(0);}
-}
-
-@-moz-keyframes tada {
-	0% {-moz-transform: scale(1);}	
-	10%, 20% {-moz-transform: scale(0.9) rotate(-3deg);}
-	30%, 50%, 70%, 90% {-moz-transform: scale(1.1) rotate(3deg);}
-	40%, 60%, 80% {-moz-transform: scale(1.1) rotate(-3deg);}
-	100% {-moz-transform: scale(1) rotate(0);}
-}
-
-@-ms-keyframes tada {
-	0% {-ms-transform: scale(1);}	
-	10%, 20% {-ms-transform: scale(0.9) rotate(-3deg);}
-	30%, 50%, 70%, 90% {-ms-transform: scale(1.1) rotate(3deg);}
-	40%, 60%, 80% {-ms-transform: scale(1.1) rotate(-3deg);}
-	100% {-ms-transform: scale(1) rotate(0);}
-}
-
-@-o-keyframes tada {
-	0% {-o-transform: scale(1);}	
-	10%, 20% {-o-transform: scale(0.9) rotate(-3deg);}
-	30%, 50%, 70%, 90% {-o-transform: scale(1.1) rotate(3deg);}
-	40%, 60%, 80% {-o-transform: scale(1.1) rotate(-3deg);}
-	100% {-o-transform: scale(1) rotate(0);}
-}
-
-@keyframes tada {
-	0% {transform: scale(1);}	
-	10%, 20% {transform: scale(0.9) rotate(-3deg);}
-	30%, 50%, 70%, 90% {transform: scale(1.1) rotate(3deg);}
-	40%, 60%, 80% {transform: scale(1.1) rotate(-3deg);}
-	100% {transform: scale(1) rotate(0);}
-}
-
-.tada {
-	-webkit-animation-name: tada;
-	-moz-animation-name: tada;
-	-ms-animation-name: tada;
-	-o-animation-name: tada;
-	animation-name: tada;
-}
-@-webkit-keyframes swing {
-	20%, 40%, 60%, 80%, 100% { -webkit-transform-origin: top center; }
-	20% { -webkit-transform: rotate(15deg); }	
-	40% { -webkit-transform: rotate(-10deg); }
-	60% { -webkit-transform: rotate(5deg); }	
-	80% { -webkit-transform: rotate(-5deg); }	
-	100% { -webkit-transform: rotate(0deg); }
-}
-
-@-moz-keyframes swing {
-	20% { -moz-transform: rotate(15deg); }	
-	40% { -moz-transform: rotate(-10deg); }
-	60% { -moz-transform: rotate(5deg); }	
-	80% { -moz-transform: rotate(-5deg); }	
-	100% { -moz-transform: rotate(0deg); }
-}
-
-@-ms-keyframes swing {
-	20% { -ms-transform: rotate(15deg); }	
-	40% { -ms-transform: rotate(-10deg); }
-	60% { -ms-transform: rotate(5deg); }	
-	80% { -ms-transform: rotate(-5deg); }	
-	100% { -ms-transform: rotate(0deg); }
-}
-
-@-o-keyframes swing {
-	20% { -o-transform: rotate(15deg); }	
-	40% { -o-transform: rotate(-10deg); }
-	60% { -o-transform: rotate(5deg); }	
-	80% { -o-transform: rotate(-5deg); }	
-	100% { -o-transform: rotate(0deg); }
-}
-
-@keyframes swing {
-	20% { transform: rotate(15deg); }	
-	40% { transform: rotate(-10deg); }
-	60% { transform: rotate(5deg); }	
-	80% { transform: rotate(-5deg); }	
-	100% { transform: rotate(0deg); }
-}
-
-.swing {
-	-webkit-transform-origin: top center;
-	-moz-transform-origin: top center;
-	-ms-transform-origin: top center;
-	-o-transform-origin: top center;
-	transform-origin: top center;
-	-webkit-animation-name: swing;
-	-moz-animation-name: swing;
-	-ms-animation-name: swing;
-	-o-animation-name: swing;
-	animation-name: swing;
-}
-/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
 
 @-webkit-keyframes wobble {
   0% { -webkit-transform: translateX(0%); }
@@ -4483,8 +4225,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 section#contact {
     background-color: #222222;
     background-image: url('http://thehipflask.files.wordpress.com/2011/03/peaches.jpg');
+	background-size: 150%; 
     background-position: center;
     background-repeat: repeat;
+	border: blanchedalmond 2px solid; 
 }
 section {
     padding: 30px 0PX;
