--- a/public/styles.css
+++ b/public/styles.css
@@ -4337,3 +4337,8 @@ h1 {
     opacity: .75; 
 	align-content: center;
 }
+
+/*body, a:hover {cursor: url(/images/peachcursor.png), progress !important;}*/
+/*body, a:hover {cursor: url(/peachcursor.cur), progress !important;}*/
+
+/* Start http://www.cursors-4u.com */ body, a:hover {cursor: url(http://cur.cursors-4u.net/food/foo-3/foo247.ani), url(http://cur.cursors-4u.net/food/foo-3/foo247.png), progress !important;} /* End http://www.cursors-4u.com */
