--- a/public/styles.css
+++ b/public/styles.css
@@ -4254,10 +4254,10 @@ h1 {
 /* Start http://www.cursors-4u.com */ body, a:hover {cursor: url(http://cur.cursors-4u.net/food/foo-3/foo247.ani), url(http://cur.cursors-4u.net/food/foo-3/foo247.png), progress !important;} /* End http://www.cursors-4u.com */
 
 
-.cell {
+ .cell {
                             display: table-cell;
-                            border-right: 1px solid #000000;
-                            border-bottom: 1px solid #000000;
+/*                            border-right: 1px solid #000000;
+                            border-bottom: 1px solid #000000;*/
                             width: 200px;
                             height: 30px;
                             overflow:hidden;
@@ -4271,8 +4271,8 @@ h1 {
                         
                         .table {
                             display: table;
-                            border-left: 1px solid #000000;
-                            border-top: 1px solid #000000;
+/*                            border-left: 1px solid #000000;
+                            border-top: 1px solid #000000;*/
                             display: table;
                         }
 
@@ -4291,10 +4291,10 @@ body{
 	font-family: Courier New, Courier, monospace;
 
 }
-
+/*
 #jeffy{
-	border-radius: 25px; 
-}
+	
+}*/
 
 /*//////FOOTER!*/
 
